syntax = "proto3";

package ca.samanthaireland.stormstack.thunder.api.proto;

option java_package = "ca.samanthaireland.stormstack.thunder.api.proto";
option java_outer_classname = "CommandProtos";

// Command request sent by clients
message CommandRequest {
    // Name of the command to execute
    string command_name = 1;

    // Match ID for the command context
    int64 match_id = 2;

    // Player ID sending the command
    int64 player_id = 3;

    // Command-specific payload
    oneof payload {
        SpawnPayload spawn = 10;
        AttachRigidBodyPayload attach_rigid_body = 11;
        AttachSpritePayload attach_sprite = 12;
        GenericPayload generic = 13;
    }
}

// Payload for spawn commands
message SpawnPayload {
    int64 entity_type = 1;
    int64 position_x = 2;
    int64 position_y = 3;
}

// Payload for move commands
message MovePayload {
    int64 entity_id = 1;
    int64 target_x = 2;
    int64 target_y = 3;
}

// Payload for attachRigidBody commands
message AttachRigidBodyPayload {
    int64 entity_id = 1;
    int64 mass = 2;
    int64 position_x = 3;
    int64 position_y = 4;
    int64 velocity_x = 5;
    int64 velocity_y = 6;
}

// Payload for attachSprite commands
message AttachSpritePayload {
    int64 entity_id = 1;
    int64 resource_id = 2;
    int64 width = 3;
    int64 height = 4;
    bool visible = 5;
}

// Generic payload for custom commands with arbitrary parameters
message GenericPayload {
    map<string, string> string_params = 1;
    map<string, int64> long_params = 2;
    map<string, double> double_params = 3;
    map<string, bool> bool_params = 4;
}

// Response sent back to clients
message CommandResponse {
    // Status of the command
    Status status = 1;

    // Optional message (error details, etc.)
    string message = 2;

    // Command name that was processed
    string command_name = 3;

    enum Status {
        UNKNOWN = 0;
        ACCEPTED = 1;
        ERROR = 2;
        INVALID = 3;
    }
}
